--- a/roadmap.yml
+++ b/roadmap.yml
@@ -1,6 +1,9 @@
 Build 2 =============================================================================================================================
 - Befehle einbauen um per Gui die Einstellungen der verteilerkisten und Lagerkisten aufzurufen und zu ändern.
 - Cmd um alle Lagerkisten abzusuchen, welche das Item als Filter haben als liste
+- Ein Vererbungsbefehl.
+- Ein Toggelbefehl um Verteilerkisten abschlag zu können.
+- Lagerkiste nur mit leeren hand einstellen.
 
 Base & Build 1=======================================================================================================================
 - +mysql TableI
