--- a/german.yml
+++ b/german.yml
@@ -12,6 +12,10 @@ NotSameServer: '&cDu bist nicht auf dem gleichen Server. Angegebener Server: &f%
 BeforeSelect: '&cAchtung!~!~&eBevor du den diesen Befehl ausführen kannst, klicke zuerst auf den davor stehenden Namen oder die ID.'
 CancelAction: '&cAktion Abgebrochen! &eFalls dies unerwünscht ist, die vermeintliche Aktion erneut per Befehl setzten oder auslösen.'
 Cooldown: '&eDu klickst zu schnell.'
+DoubleChestAlreadyAsDistributionChestExist: '&cDieser Kistenteil kann nicht registriert werden, da der andere Kistenteil schon registriert ist!'
+ChestAlreadyAsDistributionChestExist: '&cDieser Block ist schon als Verteilerkiste registeriert!'
+DistributionIsRunning: '&cAchtung! &7Der Verteilungsprozess ist schon aktiv für diesen Block, deshalb kann er nicht geöffnet werden. Wieder offen ab: %time%'
+SafetyBreak: '&cAchtung! Du bist dabei eine Verteilerkiste abzubauen! Falls das gewollt ist, stelle per Befehl zuerst dies ein!'
 
 NoNumber: '&cDas Argument &f%args% &cist keine Nummer!'
 NumberIsNegativ: '&cDie Zahl &f%args% &cist Negativ! Benutze nur positive Zahlen!'
@@ -25,10 +29,14 @@ CmdAsh:
     Next: '&e&nnächste Seite &e==>'
     Past: '&e<== &nvorherige Seite'
     ash: '&c/ash &f| Basis und InfoBefehl'
+    ash_automaticdistributioninfo: '&c/ash automaticdistributioninfo &f| Zeigt alle Info zum Automatischen Verteilen an.'
     ash_blockinfo: '&c/ash blockinfo &f| Zeigt mit shift+Rechtsklick alle Blocksinfo vom Lagersystem.'
     ash_cancel: '&c/ash cancel &f| Bricht alle Aktionen ab.'
+    ash_debug: '&c/ash debug &f| Zwischenbefehl'
+    ash_debug_itemmeta: '&c/ash debug itemmeta &f| Zeigt einen String der Itemmeta des Items in der Haupthand an.'
     ash_dc: '&c/ash distributionchest &f| Zwischenbefehl.'
     ash_dc_autodistr: '&c/ash distributionchest automaticdistribution &f| Toggelt, ob der Schedular die Kiste absaugen und die Items verteilen kann.'
+    ash_dc_breaking: '&c/ash distributionchest breaking &f| Toggelt, ob du Verteilerkisten abbauen möchtest.'
     ash_dc_chestname: '&c/ash distributionchest chestname <Name> &f| Setzt einen neuen Namen für die Verteilerkiste.'
     ash_dc_create: '&c/ash distributionchest create <Name> &f| Beginnt die Erstellung einer Verteilerkiste.'
     ash_dc_delete: '&c/ash distributionchest delete &f| Löscht die vorher ausgewählte Verteilerkiste.'
@@ -39,6 +47,7 @@ CmdAsh:
     ash_dc_search: '&c/ash distributionchest search &f| Sucht die ausgewählte Verteilerkiste.'
     ash_dc_select: '&c/ash distributionchest select <ID> &f| Wählt eine Verteilerkiste aus.'
     ash_dc_switch: '&c/ash distributionchest switch &f| Toggelt ob die Prioriäten aufsteigend oder absteigend berücksichtig werden sollen.'
+    ash_dc_transfer: '&c/ash distributionchest transfer <Spielername> &f| Überträgt den Eigentümerstatus auf den angegebenen Spieler.'
     ash_endstorage: '&c/ash endstorage &f| Toggelt die Lagerkiste zu einer Endlagerkiste.'
     ash_gui: '&c/ash gui &f| Toggelt zwischen den Baumodus und dem Gui-Öffnungsmodus.'
     ash_itemfilterset: '&c/ash itemfilterset &f| ZwischenBefehl.'
@@ -62,6 +71,11 @@ CmdAsh:
     ash_sc_select: '&c/ash storagechest select <ID> &f| Wählt eine Lagerkiste aus.'
     ash_sc_search: '&c/ash storagechest search &f| Sucht die ausgewählte Lagerkiste.'
     ash_sc_update: '&c/ash storagechest update &f| Toggelt den Updatemodus für die Lagerkisten.'
+  AutoDistribution:
+    Headline: '&e===&7[&6Infos zur Automatischen Verteilung&7]&e==='
+    TotalTick: '&cVerteilungszyklus: &f%time%'
+    TicksPerDc: '&cZeit pro Verteilerkiste: &f%time%'
+    NextDc: '&cNächste VerteilerkistenID: &f%id%'
   BlockBreak:
     DeleteDC: '&cVerteilerkiste &f%id% &c| &f%name% &cgelöscht!'
     DeleteSC: '&cLagerkiste &f%id% &cgelöscht!'
@@ -74,6 +88,9 @@ CmdAsh:
   Cancel:
     SetCancel: '&eZum+Abbrechen+des+Vorgangs+klicke+hier+oder+gib+&f/ash+cancel+&eein!~click@RUN_COMMAND@/ash+cancel'
     IsCancel: '&cVorgang abgebrochen!'
+  CanBreakDChest:
+    Active: '&eDu kannst nun Verteilerkisten abbauen. &cSei also vorsichtig!'
+    Deactive: '&eDu kannst nun keine Verteilerkisten mehr abbauen!'
   Create:
     Init: '&eDu bist dabei eine Verteilerkiste zu erstellen! Bitte klicke mit &cShift + Rechts &enun die neue Verteilerkiste an!'
     NameExist: '&cDer Name existiert schon!'
@@ -86,6 +103,7 @@ CmdAsh:
     DistributionChestDontExistNone: '&cDie Verteilerkiste, zu dem diese Lagerkiste gehört, existiert nicht mehr!'
     SetupSChest: '&aLagerkiste+&f%sc%+&aerstellt!+&eFür+weitere+Informationen+klicke+hier~click@RUN_COMMAND@/ash+storagechest+info'
     UpdateStorageChest: '&eLagerkiste+Update!+Klicke+hier+für+weitere+Informationen~click@RUN_COMMAND@/ash+storagechest+info'
+    SChestDontBeSameAsDChest: '&cDie Lagerkiste kann nicht gleichzeitig die Verteilerkiste, des gleichen Lagersystems sein!'
   Delete:
     DistributionChestDontExist: '&cDie Verteilerkiste &f%id% &cexistiert nicht!'
     DChestDeleted: '&eVerteilerkiste &f%id% &e| &f%name% &eist &cgelöscht!'
@@ -228,6 +246,9 @@ CmdAsh:
     SelectDChest: '&eVerteilerkiste &f%iddc% &e| &f%name% &eausgewählt!'
     SelectSChest: '&eLagerkiste &f%idsc% &eder Verteilerkiste &f%iddc% &e| &f%name% &eausgewählt!'
     SelectSChestWithOutD: '&eLagerkiste &f%id% &eausgewählt! Beachte, dass diese Kiste mit keiner Verteilerkiste verlinkt ist!'
+  Transfer:
+    TransferDc: '&eDu hast die Verteilerkiste &f%id% | %name% &ean &c%player% &eübertragen!'
+    TransferDcToYou: '&eDer Spieler &c%player% &ehat dir den Eigentümerstatus der Verteilerkiste &f%id% | %name% &eübertragen!'
   Update:
     StorageChestDontExist: '&cDie Lagerkiste mit der gewählten Verteilerkiste existiert nicht!'
     MayDelete: '&cDie gewählte Verteilerkiste existiert nicht mehr. Falls+Lagerkiste+gelöscht+werden+soll+klicke+hier!~click@SUGGEST_COMMAND@/ash+delete+s+%sc% Oder+wähle+eine+andere+Verteilerkiste+aus+und+klicke+hier+für+den+Änderungs-Modus~click@RUN_COMMAND@/ash+override~hover@SHOW_TEXT@&eÄnderungsmodus+bedeutet,+dass+die+Lagerkiste+nicht+nur+normal+geupdatet+wird,~!~&esonder+auch,+dass+die+Verteilerkiste+überschrieben+wird!~!~&cSofern+es+nicht+mehr+gebraucht+wird,+unbedingt+deaktivieren!'
