--- a/roadmap.yml
+++ b/roadmap.yml
@@ -20,7 +20,10 @@ Build 2 ========================================================================
 - +Platten und Knöpfe haben nun einen einstellbaren Radius in der config.
 - +Per befehl kann man nun Lagersysteme auf andere Spieler übertragen.
 - +Togglebefehl um einzustellen ob man wirklich verteilerkisten abbauen will.
-- Bugfix, Verteilerkisten können sich nicht mehr selbst als Lagerkiste haben.
+- +Bugfix, Verteilerkisten können sich nicht mehr selbst als Lagerkiste haben.
+- +Verteilungsvorgang unterbinden, mehrfach anzulaufen
+- +Items werden in Kettekiste verteilt, aber von da nicht, da die 10 sekunden zu kurz sind bspw.
+- +Befehl zum löschen von Verteilerkiste & Lagerkiste pro Server, pro Welt löschen kann
 
 Base & Build 1=======================================================================================================================
 - +mysql TableI
