--- a/roadmap.yml
+++ b/roadmap.yml
@@ -4,11 +4,46 @@ Future =========================================================================
 - Ein Vererbungsbefehl.
 - Ein Toggelbefehl um Verteilerkisten abschlag zu können.
 - Lagerkiste nur mit leeren hand einstellen.
-- Die Option "Void" zu den Lagerkisten hinzufügen. Void sorgt dafür, dass alle Item, welche in diese kommen sollten, ins void wanderen.
 - Die Option "MoneyPrinter" zu den Lagerkisten hinzufügen. Der MoneyPrinter sorgt dafür, dass alle Item, welche in diese kommen sollten, in Geld (per yaml) umgewandelt werden.
+- Wenn man die kisten vorherbefüllt und dann diese als Lagerkiste registriert, dann verschwinden die Items, die vorher drin waren.
+
+Build 4 =============================================================================================================================
+- Die Option "Void" zu den Lagerkisten hinzufügen. Void sorgt dafür, dass alle Item, welche in diese kommen sollten, ins void wanderen.
 - Die Option "Haltbarkeit" zu den Lagerkisten hinzufügen. Welche einen größer, kleiner oder zwischen Betrag angeben lässt, um Items, welche eine Haltbarkeit haben, dahingehend sortiert werden kann.
 - Die Option "Reparatur" zu den Lagerkisten hinzugefügt. Welche einen größer, kleiner oder zwischen Betrag angeben lässt, um Items, welche eine Reparaturkosten haben dahingehend sortieren zu können.
-- Wenn man die kisten vorherbefüllt und dann diese als Lagerkiste registriert, dann verschwinden die Items, die vorher drin waren.
+- Die Option "Verzauberung" hinzufügen. Diese soll als Filter dafür sorgen, dass mit dem ItemFilterset Items welchen beides entspricht sortiert wird. Beispiel. Itemfilter Goldhelm unverz. Verzauberung on. 
+  Nun legt man ein verzauberten Goldhelm hinein. Ungeachtet welche Verz. dieser hat, wird der reinsortiert.
+- Vereinfachung des Erstellungsprozesses für Lagersysteme:
+  - (Mit Befehl)Ohne Item (leere Hand) (Ohne Shift) soll zukünftig nach einem eingangsbefehl die Lagerkisten erstellt werden, wie es zuvor auch war.
+  - (Mit Befehl)Mit einer redstonekiste in der hand (Ohne Shift) beim erstellen von Lagerkisten, soll direkt der eingestellte Itemfilterset übernommen werden, ohne das gui aufzurufen.
+  - (Mit Befehl)Mit einem normalen kiste bei erstellung von Lagerkisten, die items IN der Kiste als Itemfilterset übernehmen und somit das gui nicht aufzurufen.
+  - +Mit einer Enderkiste (Ohne Shift) sollen Verteilerkisten kopiert werden können. Dabei ist der erste klick mit der enderkiste der Copy und der 2. der Paste. (Nur für System mit weniger als x Kisten (LIMIT))
+  - +Mit einem Fass (MIt shift) wird die Verteilerkiste, ohne Shift eine Lagerkiste ausgewählt.
+  - +Mit dem Schmelzofen (Ohne shift) auf eine bestehende Lagerkiste, wird das Itemfilterset aufgerufen. Mit Shift werden ein Teil der Zugehörigen Lagerkisten einer Verteilerkiste angezeigt. (Visuelle darstellung)
+  - Mit einem Ofen (ohne shift) wird eine GUI zu den Optioneinstellungen einer lagerkiste, (mit shift) das der Verteilerkisten aufgerufen.
+  - +Mit einem Räucherofen (ohne Shift) kann eine Lagerkiste versetzt werden. Mit Shift kann eine Verteilerkiste versetzt werden.
+- +Öfen aller Art, Trichter, Spender, Werfer, Braustand als Verteilungsziel herausnehmen.
+- +Verbessertes Verteilungssystem
+  - +Physikalische Verteilung
+  - +Button Verteilung
+  - +Automatische Verteilung
+- Das Plugin soll intern es blocken, weitere Lagersystem auf bereits existierende Lagerkisten zu setzten wenn es NICHT die Mitglieder des orginalen Lagersystem ist.
+- Über ein Schild per LWC so handhaben, dass nur LWC Mitglieder die Priorität des Lagersystem Switchen können.
+- Über ein Schild per LWC so handhaben, die Prioritäten zuweisen können um somit NUR Lagerkisten mit der exakten Prio anzusprechen.
+  Zeile 2: [Lager]
+  Zeile 3: Verteilerkiste ID (Exakt)
+  Zeile 4: Entweder das Wort Switch ODER die Priorität als Zahl zur Zuweisung ODER das Wort "Verteilen" um den verteilungsprozess fern zu aktivieren.
+  Die Schilder müssen NUR auf dem gleichen Server sein. (Aka nicht an der Kiste selbst)
+- Namen für Lagerkisten
+- Die Visualisierung soll in Schritten passieren. Bspw. immer 10 Lagerkisten werden per Hologram angezeigt. Dabei werden dann Verteilerkistename, ID der Lagerkiste und dessen Priorität.
+- Per befehl kann man den nächsten/vorherigen Schritt der Visualisierung triggern. Durch eine Option kann man auch nur bestimmte Prioritäten angezeigt.
+- Bugfix: Positionsupdate für Lager- und Verteilerkisten
+- +Bugfix: Interner Fehler = Nullpointer ChatColor InteractHandler.java:509
+- +Bugfix: Interner Fehler = InteractHandler.java:728
+- +Bugfix: Interner Fehler = Nullpointer InteractHandler.java:484
+- +Interne Überholung auf den jetztigen Standart
+- Alle Kisten in der Welt des ausführenden Spielers, den Server updaten.
+- Shulkerkisten komplett rausnehmen.
 
 Build 3 =============================================================================================================================
 - +/ash distributionchest random, hinzugefügt. Setzt die Verteilerkiste in den Randommodus.
