Build 4 - Version Development End

--- a/plugin.yml
+++ b/plugin.yml
@@ -5,7 +5,7 @@ load: STARTUP
 api-version: 1.16
 description: a Storage System Plugin
 author: Avankziar
-softdepend: [Vault]
+softdepend: [Vault, LWC]
 commands:
   ash:
     description: base command
